<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginTop="10dp"
    android:padding="10dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/firstname"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/firstname"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFirstName"
        app:layout_constraintStart_toEndOf="@+id/guidLineVertical"
        app:layout_constraintTop_toTopOf="@+id/tvFirstName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/lastname"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/lastname"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLastName"
        app:layout_constraintStart_toEndOf="@+id/guidLineVertical"
        app:layout_constraintTop_toTopOf="@+id/tvLastName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLastName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEmail"
        app:layout_constraintStart_toEndOf="@+id/guidLineVertical"
        app:layout_constraintTop_toTopOf="@+id/tvEmail" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_marginEnd="10dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ed_corner"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintEnd_toStartOf="@+id/guidLineVertical"
        app:layout_constraintStart_toStartOf="@id/tvFirstName"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBtnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="@+id/btnDelete"
        app:layout_constraintTop_toTopOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="@+id/btnDelete"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/ed_corner"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/guidLineVertical"
        app:layout_constraintTop_toTopOf="@+id/btnDelete"
        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/update"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnUpdate"
        app:layout_constraintStart_toStartOf="@+id/btnUpdate"
        app:layout_constraintTop_toTopOf="@+id/btnUpdate"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdate"/>


</androidx.constraintlayout.widget.ConstraintLayout>